css/style.css
* {
  margin: auto;
  padding: auto;
  width: 1000px;
  box-sizing: auto;
}

.game-board {
  width: 90%;
  height: 500px;
  bottom: auto;
  margin: auto;
  position: relative;
  overflow: hidden;
  background: linear-gradient(#87ceeb, #e0f6ff);
}

.back {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 100%;
  border: 0;
  left: 0;
}

.pipe {
  position: absolute;
  bottom: -6px;
  width: 70px;
  right: "";
  animation: pipe-animation 4s infinite linear;
}

.pipe2 {
  position: absolute;
  bottom: -6px;
  width: 70px;
  right: "";
}

.mario {
  position: absolute;
  bottom: 5px;
  width: 90px;
}

.jump {
  animation: jump 500ms ease-out;
}

.clouds {
  position: absolute;
  width: 350px;
  animation: clouds-animation 20s infinite linear;
}

.floor {
  position: absolute;
  width: 1000px;
  bottom: -3px;
}

.logo {
  display: flex;
  left: 40%;
  position: absolute;
  width: 150px;
  bottom: 400px;
}

.seta {
  right: 30px;
  position: absolute;
  width: 70px;
  bottom: 280px;
}

.div_logo {
  display: flex;
  justify-content: center;
}

.press {
  position: absolute;
  left: 30%;
  width: 350px;
  bottom: 200px;
}

.press2 {
  position: absolute;
  left: 42%;
  width: 120px;
  bottom: 110px;
}

.div_press {
  display: flex;
  justify-content: center;
}

.div_press2 {
  display: flex;
  justify-content: center;
}

.div_pontos {
  position: absolute;
  width: 140px;
  justify-content: center;
  font-family: arial, sans-serif;
  font-weight: bold;
  font-size: 12px;
  color: #035988;
  text-shadow: 2px 4px 5px #eee;
  text-align: center;
  line-height: 1.0em;
  letter-spacing: 1px;
  word-spacing: 2px;
  left: 20px;
  border-width: 2px 5px;
  border-style: inset ;
  border-color: #2953be;
}

.div_ajuda {
  position: absolute;
  justify-content: right;
  font-family: arial, sans-serif;
  font-weight: bold;
  text-shadow: 2px 4px 5px #eee;
  line-height: 1.8em;
  letter-spacing: 1px;
  word-spacing: 2px;
  right: -913px;
  bottom: 270px;
}

.div_btn {
  display: flex;
  position: absolute;
  left: 50px;
  font-family: arial, sans-serif;
  font-weight: bold;
  text-shadow: 2px 4px 5px #eee;
  text-align: center;
  width: 90px;
  bottom: 490px;
}

.btn {
  z-index: 100;
  display: flex;
  position: absolute;
  text-align: center;
  width: 80px;
  height: 20px;
  font-size: 10px;
}

.container {
  text-align: center;
  padding: 20px;
}

.linkedin-image {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  margin-bottom: 5px;
}

.github-image {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  margin-bottom: 5px;
}

.name {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 5px;
}

.job-title {
  font-size: 16px;
  margin-bottom: 40px;
  font-weight: bold;
  color: #0077b5;
  text-decoration: none;
  text-decoration: underline;
}

.infoadd {
  font-size: 12px;
  font-weight: italic;
  color: #fb2a00;
  
}

.pisca {
  position: absolute;
  left: 30%;
  width: 350px;
  bottom: 200px;
}

.div_pisca {
  color: #fff;
  padding: 0.6em 0.8em;
  display: inline-block;
  text-decoration: none;
  border-radius: 4px;
  -webkit-animation: div_pisca 0.75s linear infinite;
  -moz-animation: div-pisca 0.75s linear infinite;
  -ms-animation: div-pisca 0.75s linear infinite;
  -o-animation: div-pisca 0.75s linear infinite;
  animation: div-pisca 0.75s linear infinite;
}

@keyframes pipe-animation {
  from {
    right: -10%;
  }
  to {
    right: 110%;
  }
}

@keyframes jump {
  0% {
    bottom: 0;
  }

  10% {
    bottom: 80px;
  }

  20% {
    bottom: 80px;
  }

  30% {
    bottom: 80px;
  }

  40% {
    bottom: 80px;
  }

  50% {
    bottom: 80px;
  }

  60% {
    bottom: 80px;
  }

  70% {
    bottom: 80px;
  }

  80% {
    bottom: 80px;
  }

  90% {
    bottom: 80px;
  }

  95% {
    bottom: 60px;
  }

  100% {
    bottom: 0;
  }
}

@keyframes clouds-animation {
  from {
    right: -550px;
  }
  to {
    right: 100%;
  }
}

@keyframes div-pisca {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

